Trader villager and textures have been updated.

--- a/forge-1.18.1-39.0.8-mdk/src/main/resources/assets/yeyespack/lang/en_us.json
+++ b/forge-1.18.1-39.0.8-mdk/src/main/resources/assets/yeyespack/lang/en_us.json
@@ -5,6 +5,8 @@
 	
 	"item.yeyespack.trader_suit_chestplate": "Trader Suit Chestplate",
 	
+	"item.yeyespack.woodworking_tble": "Market",
+	
 	"item.yeyespack.god_tier_sword": "GOD TIER SWORD",
 	
 	"itemGroup.yeyesPackTab": "Yeyes Pack",
